update app security